实现博客文章格式灵活性 - 添加自定义collections配置，支持_articles目录 - 将非日期格式的文章移动到_articles目录 - 更新博客列表页面，同时显示标准posts和自定义articles

--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,22 @@ plugins:
 # 日期格式设置
 timezone: Asia/Shanghai
 
+# 自定义集合用于非标准格式的文章
+collections:
+  articles:
+    output: true
+    permalink: /article/:path/
+
 # 默认设置 - 简化配置，允许更灵活的文章格式
 defaults:
   - scope:
       path: ""
       type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "articles"
     values:
       layout: "post"
   - scope:
