--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # 网站设置
-title: 御坂10056号的博客
-description: "御坂10056号的个人博客，分享学习心得和技术笔记"
+title: 数字森林
+description: "数字森林的个人博客，分享学习心得和技术笔记"
 baseurl: ""
 url: "https://yubanmeiqin10056.github.io"
 
