--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,51 +1,70 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
-
+name: Deploy Jekyll with Custom Dependencies
+# 触发条件：主分支推送 + 手动触发
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["main"]  # 若你的主分支是 master，改为 ["master"]
+  workflow_dispatch:  # 支持在 Actions 页面手动触发
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# 权限配置：允许 Actions 操作 GitHub Pages
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: read  # 读取仓库代码
+  pages: write    # 写入 Pages 部署内容
+  id-token: write # 身份验证（部署必需）
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# 并发控制：避免同时部署多个版本，不中断正在进行的部署
 concurrency:
-  group: "pages"  # 需要显式指定分组名称
-  cancel-in-progress: false  # 确保不中断正在进行的部署
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  # Build job
+  # 构建任务：安装依赖 → 构建站点 → 上传产物
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 基于 Ubuntu 最新版运行
     steps:
-      - name: Checkout
+      # 1. 拉取仓库代码
+      - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
 
-  # Deployment job
+      # 2. 配置 GitHub Pages（自动启用 Pages，避免 Not Found 错误）
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v5
+        with:
+          enablement: true  # 关键：自动启用 Pages 并配置为 Actions 构建
+
+      # 3. 安装系统依赖（解决 sass-embedded 编译失败问题）
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential libssl-dev libsass-dev
+
+      # 4. 配置 Ruby 环境（与本地版本一致，确保依赖兼容）
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.3.5"  # 必须 ≥3.2+，与你本地 Ruby 版本匹配
+          bundler-cache: true    # 缓存依赖，加速后续构建
+
+      # 5. 构建 Jekyll 站点（使用你的自定义依赖版本）
+      - name: Build Jekyll site
+        run: bundle exec jekyll build  # 生成 _site 目录（构建产物）
+        env:
+          JEKYLL_ENV: production  # 生产环境构建（优化性能、屏蔽调试信息）
+
+      # 6. 上传构建产物（供部署任务使用）
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          name: github-pages-artifact  # 产物名称（便于查看）
+          path: ./_site                # Jekyll 构建输出目录
+          retention-days: 1  # 产物保留 1 天（节省存储空间）
+
+  # 部署任务：依赖 build 任务成功后执行
   deploy:
     environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      name: github-pages  # 部署环境名称（固定值，GitHub 识别用）
+      url: ${{ steps.deployment.outputs.page_url }}  # 部署后站点 URL（自动生成）
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # 仅当 build 任务成功时才执行
     steps:
+      # 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4  # 官方部署工具，稳定可靠
