--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,7 +1,7 @@
 name: Deploy Jekyll with Custom Dependencies
 on:
   push:
-    branches: ["main"]  # 主分支是 master 则改为 ["master"]
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -25,7 +25,6 @@ jobs:
         with:
           enablement: true
 
-      # 安装 sass-embedded 必需的系统依赖（关键补充）
       - name: Install system dependencies for sass-embedded
         run: |
           sudo apt-get update
@@ -34,8 +33,8 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.3.5"  # 兼容 sass-embedded 1.75+
-          bundler-cache: true  # 缓存依赖，加速构建
+          ruby-version: "3.3.5"
+          bundler-cache: true
 
       - name: Build Jekyll site
         run: bundle exec jekyll build
